testing a small change

--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
 	<meta charset="UTF-8"/>
 	<meta name="viewport" content="width=device-width">
 	<meta name="description" content="FIVE Studios"/>
-	<meta name="keyboard" content="Software, Software Development, Five"/>
+	<meta name="keyboard" content="Software, Software Development, Five, Website"/>
 	<meta name="author" content="Corey Ervin">
 	<title>FIVE Studios | Welcome</title>
 </head>
