testing ftp software

--- a/home.html
+++ b/home.html
@@ -32,7 +32,7 @@
 
 	<section id="showcase">
 		<div class="container">
-			<h1>Creating Next Generation Software</h1>
+			<h1>Creating Next Generation Software for Today</h1>
 		</div>
 	</section>
 
