Added social media buttons.

--- a/home.html
+++ b/home.html
@@ -1,14 +1,11 @@
 <!DOCTYPE HTML> 
-
 <!-- FIVE Studios -->
 <!-- Code for fivestudios.ca -->
 <!-- By: Corey Ervin -->
 <!-- Mail: corey@fivestudios.ca -->
 
 
-
 <!-- Home Page -->
-
 <html>
 <html lang="en">
 
@@ -20,6 +17,7 @@
 	fivestudios, website, corey ervin, bartek godzwon, startup, toronto"/>
 	<meta name="author" content="Corey Ervin">
 	<title>FIVE Studios | Welcome</title>
+	<link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -77,14 +75,28 @@
 
 		</div>
 	</section>
-
-
+<header>
+<div class="row div1">
+	<div class="col-md-7">
+<p> FIVE Studios, Copyright &copy; 2017</p>
+</div>
+	<div class="col-md-4">
+<a href="https://twitter.com/thestudiosfive" target="_blank">
+	<button class="sm fa fa-twitter"></button>
+</a>
+<a href="https://www.instagram.com/studiosfive/?hl=en" target="_blank">
+	<button class="sm fa fa-instagram"></button>
+</a>
+<a href="https://www.facebook.com/FIVE-Studios-212285405980757/" target="_blank">
+	<button class="sm fa fa-facebook"></button>
+</a>
+	</div>
+</div>
 	<!-- Bottom page footer -->
-	<footer>
+	<!--<footer>
 		<p>FIVE Studios, Copyright &copy; 2017</p>
-	</footer>
-
-
+	</footer>>-->
+</header>
 </body>
 
 
