--- a/services.html
+++ b/services.html
@@ -5,8 +5,7 @@
 <!-- By: Corey Ervin -->
 <!-- Mail: corey@fivestudios.ca -->
 
-<!-- Home Page -->
-
+<!-- Services Page -->
 
 <html>
 <html lang="en">
@@ -15,7 +14,7 @@
 
 <head>
 	<meta charset="UTF-8"/>
-	<title>FIVE Studios | Home</title>
+	<title>FIVE Studios | Services</title>
 	<link rel="stylesheet" href="css/flexboxgrid.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.css">
@@ -33,111 +32,57 @@
 					<h1><span class="primary-text">FIVE </span>Studios</h1>
 				</div>
 				<div class="col-xs-12 col-sm-10 col-md-10 col-lg-10">
-					<nav id="navbar">
-						<ul>
-							<li class="current"><a href="index.html">Home</a></li>
-							<li><a href="about.html">About</a></li>
-							<li><a href="services.html">Services</a></li>
-							<li><a href="contact.html">Contact</a></li>
-						</ul>
-					</nav>
-				</div>
+				<nav id="navbar">
+					<ul>
+						<li><a href="home.html">Home</a></li>
+						<li><a href="about.html">About</a></li>
+						<li class="current><a href="services.html">Services</a></li>
+						<li><a href="contact.html">Contact</a></li>
+					</ul>
+				</nav>
 			</div>
 		</div>
+
 	</header>
 
-	<!-- Showcase -->
-	<section id="showcase">
+	<!-- SUBHEADER -->
+	<section id="subheader">
 		<div class="container">
-			<div class="row center-xs center-sm center-md center-lg middle-xs middle-sm middle-md middle-lg">
-				<div class="col-xs-10 col-sm-10 col-md-10 col-lg-7 showcase-content">
-					<h1>Welcome to <span class="primary-text">FIVE Studios</span></h1>
-					<p>It's Always 5 O'Clock Somewhere</p>
+			<div class="row">
+				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+					<h1>Services</h1>
 				</div>
 			</div>
 		</div>
 	</section>
 
+	<!-- MAIN PAGE --> 
 
-	<!-- Features -->
-	<section id="features">
+	<section id="page" class="services"> 
 		<div class="container">
 			<div class="row center-xs center-sm center-md center-lg">
 				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-
-					<h2>Website Design</h2>
-					<p>What's included</p>
-
-					<!-- ICON ROW 1 -->
-
-					<div class="row center-xs center-sm center-md center-lg">
-						<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
-							<i class="fa fa-dashboard"></i><br>
-							<h4>Fully Optimized</h4>
-							<p>Superior Performance and Load Times</p>
-						</div>
-
-						<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
-							<i class="fa fa-question-circle-o"></i><br>
-							<h4>Free Support</h4>
-							<p>Expert Support Available Anytime</p>
-						</div>
-
-						<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
-							<i class="fa fa-rocket"></i><br>
-							<h4>Free Upgrades</h4>
-							<p>We'll Grow With You</p>
-						</div>
-					</div>
-
-					<!-- ICON ROW 2 -->
-
-					<div class="row center-xs center-sm center-md center-lg">
-						<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
-							<i class="fa fa-line-chart"></i><br>
-							<h4>UpTime Guarantee</h4>
-							<p>Guaranteed 99.9% uptime</p>
-						</div>
-
-						<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
-							<i class="fa fa-users"></i><br>
-							<h4>Social Media Integration</h4>
-							<p>Customer Success is Social</p>
-						</div>
-
-						<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
-							<i class="fa fa-plug"></i><br>
-							<h4>Search Engine Optimization</h4>
-							<p>Let People Find You Faster</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-
-	<!-- INFO SECTION --> 
-	<section id="info">
-		<div class="container">
-			<div class="row center-xs center-sm center-md center-lg middle-xs middle-sm middle-md middle-lg">
-				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6"">
-					<img src="images/iphone.png" alt="">
-				</div>
-
-				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6"">
-					<h2>Core Features</h2>
+					<h2><span class="primary-text">See</span> We We Offer</h2>
 					<ul>
-						<li><i class="fa fa-check"></i> Fully Optimized</li>
-						<li><i class="fa fa-check"></i> Free Support</li>
-						<li><i class="fa fa-check"></i> Free Upgrades</li>
-						<li><i class="fa fa-check"></i> UpTime Guarantee</li>
-						<li><i class="fa fa-check"></i> Social Media Integration</li>
-						<li><i class="fa fa-check"></i> Search Engine Optimization</li>
+						<li>
+							<h3>Web Design & Development</h3>
+							<p>Stay Tuned!</p>
+						</li>
+
+						<li>
+							<h3>Software Development & Programming</h3>
+							<p>Stay Tuned!</p>
+						</li>
+
+						<li>
+							<h3>Social Media Managment</h3>
+							<p>Stay Tuned!</p>
+						</li>
 					</ul>
 				</div>
-
 			</div>
 		</div>
+
 	</section>
 
 	<!-- COMPANY --> 
@@ -194,7 +139,8 @@
 	</footer>
 
 
-
 </body>
+
+
 
 </html>
