--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
 <head>
 	<meta charset="UTF-8"/>
 	<title>FIVE Studios | Contact</title>
-	<link rel="stylesheet" href="css/font-awesome.css">
+	<link rel="stylesheet" href="css/flexboxgrid.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.css">
 </head>
@@ -42,7 +42,6 @@
 				</nav>
 			</div>
 		</div>
-
 	</header>
 
 	<!-- SUBHEADER -->
@@ -144,7 +143,4 @@
 
 
 </body>
-
-
-
 </html>
