fixed social buttons and added bitcoin

--- a/contact.html
+++ b/contact.html
@@ -102,8 +102,10 @@
 				</div>
 
 				<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 center-xs">
-					<h4></h4>
-					<p></p>
+					<h4>Donate Bitcoin?</h4>
+					<ul>
+						<li><i class="fa fa-btc"></i> 32mmQvUr6CXPNj6SppcTcqYMtmjd96tfA4</li>
+					</ul>
 				</div>
 
 				<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 center-xs">
@@ -128,13 +130,13 @@
 				</div>
 				<div class="col-md-4">
 					<a href="https://twitter.com/thestudiosfive" target="_blank">
-						<button class="sm fa fa-twitter"></button>
+						<i class="sm fa fa-twitter"></i>
 					</a>
 					<a href="https://www.instagram.com/studiosfive/?hl=en" target="_blank">
-						<button class="sm fa fa-instagram"></button>
+						<i class="sm fa fa-instagram"></i>
 					</a>
 					<a href="https://www.facebook.com/FIVE-Studios-212285405980757/" target="_blank">
-						<button class="sm fa fa-facebook"></button>
+						<i class="sm fa fa-facebook"></i>
 					</a>
 				</div>
 			</div>
